# indra

./: .gitignore  LICENSE.md  PLAN.md  README.md  indra.config.yaml  pyproject.toml  telegram.config.example.json
src/indra/: __init__.py  util.py
src/indra/api/: __init__.py  app.py  deps.py
src/indra/cli/: __init__.py  client.py  main.py
src/indra/coding/: __init__.py
src/indra/config/: __init__.py  loader.py  schema.py
src/indra/core/: __init__.py  agent.py  context_manager.py  executor.py  formatting.py  memory_manager.py  planner.py  run_profile.py  state_machine.py  task_manager.py
src/indra/integrations/: __init__.py
src/indra/memory/: __init__.py  compression.py  long_term_memory.py
src/indra/observability/: __init__.py  logging.py  token_tracker.py
src/indra/plugins/: __init__.py  registry.py
src/indra/prompts/: __init__.py  executor.prompt.yaml  loader.py  planner.prompt.yaml  summarizer.prompt.yaml
src/indra/providers/: __init__.py  base.py  llama_cpp_provider.py  (+1 more)
tests/: conftest.py
tests/integration/: test_agent_loop.py  test_memory_workspace_isolation.py
tests/unit/: test_answer_tool.py  test_cli_banner.py  test_cli_client.py  test_cli_safe_echo.py  test_config_loader.py  test_executor_retry.py  test_file_tools.py  test_formatting.py  test_git_tools.py  test_llama_cpp_provider.py  test_memory_compression.py  test_plan_schema.py  test_plugin_registry.py  test_provider_singleton.py  test_run_profile.py  test_shell_tools.py  test_state_machine.py  test_token_tracker.py  test_web_search_tools.py  test_workspace_manager.py
(+28 files in other folders)
