[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indra"
version = "0.1.0"
description = "Agentic coding harness optimized for small local LLMs"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "jsonschema>=4.21",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "psutil>=5.9",
]

[project.optional-dependencies]
llama-cpp = ["llama-cpp-python>=0.2.90"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
indra = "indra.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"indra.storage" = ["migrations/*.sql"]
"indra.prompts" = ["*.prompt.yaml"]



[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
